[tool.poetry]
name = "paddleserver"
version = "0.15.2"
description = "Model Server implementation for Paddle. Not intended for use outside KServe Frameworks Images"
authors = ["Zhengyuan Zhang <zhangzhengyuan0604@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "paddleserver" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
kserve = {path = "../kserve", extras = ["storage"], develop = true}
paddlepaddle = {version="^2.6.1", markers = "platform_system != 'Windows'"}
setuptools = "^70.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "^5.0.0"
mypy = "^0.991"
opencv-python = "^4.10.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = { version = "~24.3.0", extras = ["colorama"] }

[tool.poetry-version-plugin]
source = "file"
file_path = "../VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
