[project]
authors = [
    {name = "Zhengyuan Zhang", email = "zhangzhengyuan0604@gmail.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.9"
dependencies = [
    "kserve[storage] @ file:///${PROJECT_ROOT}/../kserve",
    "paddlepaddle>=2.6.1,<=3.0.0; platform_system != 'Windows'",
    "setuptools<71.0.0,>=70.0.0",
]
name = "paddleserver"
version = "0.15.2"
description = "Model Server implementation for Paddle. Not intended for use outside KServe Frameworks Images"
readme = "README.md"

[dependency-groups]
test = [
    "pytest<8.0.0,>=7.4.4",
    "pytest-cov<6.0.0,>=5.0.0",
    "mypy<1.0,>=0.991",
    "opencv-python<5.0.0,>=4.10.0",
]
dev = [
    "black[colorama]~=24.3.0",
]
