[tool.poetry]
name = "pmmlserver"
version = "0.14.0rc0"
description = "Model Server implementation for PMML. Not intended for use outside KServe Frameworks Images."
authors = ["AnyISalIn <anyisalin@gmail.com>"]
license = "https://github.com/kserve/kserve/blob/master/LICENSE"
readme = "README.md"
packages = [
    { include = "pmmlserver" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
kserve = { path = "../kserve", extras = ["storage"], develop = true }
jpmml-evaluator = "~0.10.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
pytest-asyncio = ">=0.23.4, <1.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = { version = "~24.3.0", extras = ["colorama"] }

[tool.poetry-version-plugin]
source = "file"
file_path = "../VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
