[tool.poetry]
name = "sklearnserver"
version = "0.15.2"
description = "Model Server implementation for scikit-learn. Not intended for use outside KServe Frameworks Images."
authors = ["singhan <singhan@us.ibm.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "sklearnserver" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
kserve = { path = "../kserve", extras = ["storage"], develop = true }
scikit-learn = "~1.5.1"
joblib = "^1.4.0"
pandas = "^2.2.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
pytest-asyncio = ">=0.23.4, <1.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = { version = "~24.3.0", extras = ["colorama"] }

[tool.poetry-version-plugin]
source = "file"
file_path = "../VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
