[project]
authors = [
    {name = "singhan", email = "singhan@us.ibm.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.9"
dependencies = [
    "kserve @ file:///${PROJECT_ROOT}/../kserve",
    "kserve-storage @ file:///${PROJECT_ROOT}/../storage",
    "scikit-learn~=1.5.1",
    "joblib<2.0.0,>=1.4.0",
    "pandas<3.0.0,>=2.2.0",
]
name = "sklearnserver"
version = "0.16.0rc1"
description = "Model Server implementation for scikit-learn. Not intended for use outside KServe Frameworks Images."
readme = "README.md"

[dependency-groups]
test = [
    "pytest<8.0.0,>=7.2.0",
    "pytest-cov<5.0.0,>=4.0.0",
    "mypy<1.0,>=0.991",
    "pytest-asyncio<1.0.0,>=0.23.4",
]
dev = [
    "black[colorama]~=24.3.0",
]
