[project]
authors = [
    {name = "The KServe Authors", email = "dsun20@bloomberg.net"},
    {name = "The KServe Authors", email = "fspolti@redhat.com"},
]
license = {text = "https://github.com/kserve/kserve/blob/master/LICENSE"}
requires-python = "<3.13,>=3.10"
dependencies = [
    "aiohttp<4.0.0,>=3.10.0",
    "requests<3.0.0,>=2.32.2",
    "google-cloud-storage<3.0.0,>=2.14.0",
    "azure-storage-blob<13.0.0,>=12.20.0",
    "azure-storage-file-share<13.0.0,>=12.16.0",
    "azure-identity<2.0.0,>=1.15.0",
    "boto3<2.0.0,>=1.29.0",
    "huggingface-hub[hf-transfer]>=0.32.0",
    "dulwich>=0.21.0",
    "cryptography>=46.0.5", # CVE-2026-26007 cryptography Subgroup Attack Due to Missing Subgroup Validation for SECT Curves
    # CVE-2026-32597 PyJWT accepts unknown `crit` header extensions (RFC 7515 §4.1.11 MUST violation)
    # Pinning because it is a transitive dependency.
    "pyjwt>=2.12.0",
    # CVE-2026-30922 pyasn1 Vulnerable to Denial of Service via Unbounded Recursion
    # Pinning because it is a transitive dependency.
    "pyasn1>=0.6.3",
    # CVE-2026-21226 Azure Core is vulnerable to deserialization of untrusted data
    # Pinning because it is a transitive dependency.
    "azure-core>=1.38.0"
]
name = "kserve-storage"
version = "0.19.0rc0"
readme = "README.md"
description = "KServe Storage Handler. This module is responsible to download the models from the provided source"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.uv]
index-strategy = "unsafe-best-match"
# TODO remove later
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "ppc64le-wheels"
url = "https://wheels.developerfirst.ibm.com/ppc64le/linux"
index-strategy = "unsafe-best-match"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
kserve-storage = { path = "../storage", editable = true }

google-crc32c = [
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
    { index = "ppc64le-wheels", marker = "platform_machine == 'ppc64le'" },
]

