[tool.poetry]
name = "xgbserver"
version = "0.13.0rc1"
description = "Model Server implementation for XGBoost. Not intended for use outside KServe Frameworks Images."
authors = ["Ellis Tarn <ellisbigelow@google.com>"]
license = "https://github.com/kserve/kserve/blob/master/LICENSE"
readme = "README.md"
packages = [
    { include = "xgbserver" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
kserve = { path = "../kserve", extras = ["storage"], develop = true }
xgboost = "~2.0.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
scikit-learn = "~1.2.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
pytest-asyncio = "^0.20.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = { version = "~24.3.0", extras = ["colorama"] }

[tool.poetry-version-plugin]
source = "file"
file_path = "../VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
