[project]
authors = [
    {name = "Ellis Tarn", email = "ellisbigelow@google.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.9"
dependencies = [
    "kserve @ file:///${PROJECT_ROOT}/../kserve",
    "kserve-storage @ file:///${PROJECT_ROOT}/../storage",
    "xgboost>=2.1.1",
]
name = "xgbserver"
version = "0.15.2"
description = "Model Server implementation for XGBoost. Not intended for use outside KServe Frameworks Images."
readme = "README.md"

[dependency-groups]
test = [
    "scikit-learn~=1.5.1",
    "pytest<8.0.0,>=7.4.4",
    "pytest-cov<6.0.0,>=5.0.0",
    "mypy<1.0,>=0.991",
    "pytest-asyncio<1.0.0,>=0.23.4",
]
dev = [
    "black[colorama]~=24.3.0",
]
