[tool.poetry]
name = "poetry-version-plugin"
version = "0.1.4"
description = "Poetry plugin for dynamically extracting the package version from a __version__ variable or a Git tag."
authors = ["Sebastián Ramírez <tiangolo@gmail.com>"]
homepage = "https://github.com/tiangolo/poetry-version-plugin"
documentation = "https://github.com/tiangolo/poetry-version-plugin"
readme = "README.md"
packages = [{include = "poetry_version_plugin"}]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.2.2"

[tool.poetry.plugins."poetry.plugin"]
poetry-version-plugin = "poetry_version_plugin.plugin:VersionPlugin"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.982"
pytest = "^7.1.3"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
parallel = true

[tool.isort]
profile = "black"
