[project]
name = "error_404_isvc"
version = "0.15.0"
description = "Custom isvc that always returns 404 with a JSON message"
license = {text = "https://github.com/kserve/kserve/blob/master/LICENSE"}
requires-python = "<3.13,>=3.9"
authors = [
    {name = "The KServe Authors"},
]
dependencies = [
    "kserve @ file:///${PROJECT_ROOT}/../kserve",
]
[dependency-groups]
dev = [
    "black[colorama]~=24.3.0",
]
