[project]
authors = [
    {name = "The KServe Authors"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.9"
dependencies = [
    "kserve",
]
name = "error_404_isvc"
version = "0.16.0"
description = "Custom isvc that always returns 404 with a JSON message"

[dependency-groups]
dev = [
    "black[colorama]~=24.3.0",
]

[tool.uv.sources]
kserve = { path = "../../../kserve" }