[tool.poetry]
name = "alibiexplainer"
version = "0.16.0"
description = "Model Explanation Server. Not intended for use outside KServe Frameworks Images."
authors = ["cliveseldon <cc@seldon.io>"]
license = "https://github.com/kserve/kserve/blob/master/LICENSE"
readme = "README.md"
packages = [
    { include = "alibiexplainer" },
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
kserve = { path = "../../../../../python/kserve", extras = ["storage"], develop = true }
alibi = { version = "^0.9.4", extras = ["shap"] } # From 0.9.5 alibi uses BSL license (removed tensorflow extra to allow newer tensorflow/protobuf)
tensorflow = ">=2.15"  # version that supports protobuf 5.x and python 3.9
protobuf = "^5.27.1"  # Override to match kserve's requirement
dill = "^0.3.8"
nest-asyncio = "~1.4.0"
llvmlite = ">0.38.1" # needed since poetry chooses lower version of llvmlite which is not supported by python 3.9 above
tensorflow-io-gcs-filesystem = "0.37.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
sklearnserver = { path = "../../../../../python/sklearnserver", develop = true }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = { version = "~24.3.0", extras = ["colorama"] }

[tool.poetry-version-plugin]
source = "file"
file_path = "../../../../../python/VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
