[tool.poetry]
name = "test-custom-version"
version = "0"
description = ""
authors = ["Sebastián Ramírez <tiangolo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
